--- a/contacts.html
+++ b/contacts.html
@@ -16,9 +16,26 @@
       <li><a href="aboutus.html">О НАС</a></li>
     </ul>
   </header>
-
-  
-
-  <script src="script.js"></script>
+  <div class="container">
+    <div class="cont">
+      <h2>ООО «АГРО.М»</h2>
+      <h1>Юридический адрес:</h1>
+      <p>143060, Московская область, г. Одинцово, поселок Часцы, дом 3</p>
+      <h1>Центральный офис</h1>
+      <p>125047, г. Москва, Лесная улица, дом 5Б, 13-й этаж</p>
+      <h1>Телефон:</h1>
+      <p>+7 495 775-05-50</p>
+      <h1>Электронная почта:</h1>
+      <p>info@agro.m</p>
+    </div>
+    <div class="descr">
+      <h1>Описание продукта</h1>
+      <p> Обжаренные до румяной корочки, хрустящие и сочные куриные наггетсы не даром стали любимым лакомством и детей, и взрослых. Нежное белое мясо птицы сохраняет весь свой аромат благодаря золотистой панировке. Это прекрасное сочетание по праву стало настоящим кулинарным бестселлером!
+      <h1>Пищевая ценность:</h1>
+      <p>Белки — 13 г, жиры — 7,4 г, углеводы – 16 г</p>
+      <h1>Энергетическая ценность:</h1>
+      <p>182 ккал/765 кДж</p>
+    </div>
+  </div>
 </body>
 </html>
