--- a/catalog/naggets2.html
+++ b/catalog/naggets2.html
@@ -19,14 +19,14 @@
     </header>
 
     <div class="container">
-      <img src="../catalog_pic/1.png" alt="">
+      <img src="../catalog_pic/2.png" alt="">
       <div class="descr">
       <h1>Описание продукта</h1>
-      <p> Обжаренные до румяной корочки, хрустящие и сочные куриные наггетсы не даром стали любимым лакомством и детей, и взрослых. Нежное белое мясо птицы сохраняет весь свой аромат благодаря золотистой панировке. Это прекрасное сочетание по праву стало настоящим кулинарным бестселлером!
+      <p>Нежнейший сыр придает наггетсам соблазнительный аромат и насыщенный, пикантный вкус, а золотистая панировка «Миланезе» сохраняет сочность отборного куриного филе. Приятного аппетита!</p>
       <h1>Пищевая ценность:</h1>
-      <p>Белки — 13 г, жиры — 7,4 г, углеводы – 16 г</p>
+      <p>белки — 11 г, жиры — 9,6 г, углеводы — 20,5 г</p>
       <h1>Энергетическая ценность:</h1>
-      <p>182 ккал/765 кДж</p></div>
+      <p>206,5 ккал / 865,5 кДж</p></div>
     </div>
 
 
