--- a/catalog/naggets4.html
+++ b/catalog/naggets4.html
@@ -19,14 +19,14 @@
     </header>
 
     <div class="container">
-      <img src="../catalog_pic/1.png" alt="">
+      <img src="../catalog_pic/4.png" alt="">
       <div class="descr">
       <h1>Описание продукта</h1>
-      <p> Обжаренные до румяной корочки, хрустящие и сочные куриные наггетсы не даром стали любимым лакомством и детей, и взрослых. Нежное белое мясо птицы сохраняет весь свой аромат благодаря золотистой панировке. Это прекрасное сочетание по праву стало настоящим кулинарным бестселлером!
+      <p>Классические куриные наггетсы — это нежнейшие кусочки куриного мяса в золотистой панировке. Одновременно хрустящие и сочные, они придутся по вкусу даже самому искушенному гурману. Попробуйте!</p>
       <h1>Пищевая ценность:</h1>
       <p>Белки — 13 г, жиры — 7,4 г, углеводы – 16 г</p>
       <h1>Энергетическая ценность:</h1>
-      <p>182 ккал/765 кДж</p></div>
+      <p>182.7 ккал/765 кДж</p></div>
     </div>
 
 
