--- a/catalog/steak1.html
+++ b/catalog/steak1.html
@@ -19,14 +19,14 @@
     </header>
 
     <div class="container">
-      <img src="../catalog_pic/1.png" alt="">
+      <img src="../catalog_pic/5.png" alt="">
       <div class="descr">
       <h1>Описание продукта</h1>
-      <p> Обжаренные до румяной корочки, хрустящие и сочные куриные наггетсы не даром стали любимым лакомством и детей, и взрослых. Нежное белое мясо птицы сохраняет весь свой аромат благодаря золотистой панировке. Это прекрасное сочетание по праву стало настоящим кулинарным бестселлером!
+      <p>Чак ролл — часть самой длинной мышцы, выделяющейся с первых трех ребер и первых трех грудных позвонков. Сверху стейк покрыт тонкой жировой прослойкой, делающей мясо нежным и сочным. Чак ролл идеально подойдет для жарки, запекания в маринаде.</p>
       <h1>Пищевая ценность:</h1>
-      <p>Белки — 13 г, жиры — 7,4 г, углеводы – 16 г</p>
+      <p>Белки — 16 г, Жиры — 18 г</p>
       <h1>Энергетическая ценность:</h1>
-      <p>182 ккал/765 кДж</p></div>
+      <p>230 кКал</p></div>
     </div>
 
 
