--- a/catalog/naggets3.html
+++ b/catalog/naggets3.html
@@ -19,14 +19,14 @@
     </header>
 
     <div class="container">
-      <img src="../catalog_pic/1.png" alt="">
+      <img src="../catalog_pic/3.png" alt="">
       <div class="descr">
       <h1>Описание продукта</h1>
-      <p> Обжаренные до румяной корочки, хрустящие и сочные куриные наггетсы не даром стали любимым лакомством и детей, и взрослых. Нежное белое мясо птицы сохраняет весь свой аромат благодаря золотистой панировке. Это прекрасное сочетание по праву стало настоящим кулинарным бестселлером!
+      <p>Наггетсы куриные с ветчиной от «Мираторга» – продукт для тех, кто хочет приготовить сытный ужин быстро и без усилий. Они всегда получаются вкусными даже у тех, кто готовит впервые.</p>
       <h1>Пищевая ценность:</h1>
-      <p>Белки — 13 г, жиры — 7,4 г, углеводы – 16 г</p>
+      <p>Белки — 12,6 г, жиры — 9,5 г, углеводы — 18,1 г</p>
       <h1>Энергетическая ценность:</h1>
-      <p>182 ккал/765 кДж</p></div>
+      <p>208,1 кКал/ 871,5 кДж</p></div>
     </div>
 
 
