--- a/catalog/steak3.html
+++ b/catalog/steak3.html
@@ -19,14 +19,14 @@
     </header>
 
     <div class="container">
-      <img src="../catalog_pic/1.png" alt="">
+      <img src="../catalog_pic/7.png" alt="">
       <div class="descr">
       <h1>Описание продукта</h1>
-      <p> Обжаренные до румяной корочки, хрустящие и сочные куриные наггетсы не даром стали любимым лакомством и детей, и взрослых. Нежное белое мясо птицы сохраняет весь свой аромат благодаря золотистой панировке. Это прекрасное сочетание по праву стало настоящим кулинарным бестселлером!
+      <p>Медальоны из премиальной говядины с самой высокой степенью мраморности — prime. Это мясо отличается исключительной мягкостью, а тонкие жировые прослойки делают наши медальоны из вырезки по-настоящему сочными. Идеальным для него станет прожарка rare или medium rare.</p>
       <h1>Пищевая ценность:</h1>
-      <p>Белки — 13 г, жиры — 7,4 г, углеводы – 16 г</p>
+      <p>Белки — 16 г, Жиры — 18 г</p>
       <h1>Энергетическая ценность:</h1>
-      <p>182 ккал/765 кДж</p></div>
+      <p>230 кКал</p></div>
     </div>
 
 
