--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
           </a>      
         </li>
         <li>
-          <a href="" class="card">
+          <a href="catalog/naggets2.html" class="card">
             <img src="pictures/pic2.png" class="card__image">
             <div class="card__overlay">        
               <div class="card__header">                
@@ -45,7 +45,7 @@
           </a>
         </li>
         <li>
-          <a href="" class="card">
+          <a href="catalog/naggets3.html" class="card">
             <img src="pictures/pic3.png" class="card__image" alt="" />
             <div class="card__overlay">
               <div class="card__header">                   
@@ -58,12 +58,12 @@
           </a>
         </li>
         <li>
-          <a href="" class="card">
+          <a href="catalog/naggets4.html" class="card">
             <img src="pictures/picc4.png" class="card__image" alt="" />
             <div class="card__overlay">
               <div class="card__header">                
                 <div class="card__header-text">
-                  <h3 class="card__title">Наггетсы куриные класс.</h3>
+                  <h3 class="card__title">Наггетсы куриные класc.</h3>
                   <span class="card__status">300 грамм</span>
                 </div>          
               </div>
@@ -71,7 +71,7 @@
           </a>
         </li>
         <li>
-            <a href="" class="card">
+            <a href="catalog/steak1.html" class="card">
               <img src="pictures/pic4.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -84,7 +84,7 @@
             </a>
         </li>   
         <li>
-            <a href="" class="card">
+            <a href="catalog/steak2.html" class="card">
               <img src="pictures/pic5.png" class="card__image" alt="" />
               <div class="card__overlay">
                 <div class="card__header">                
@@ -110,7 +110,7 @@
             </a>
         </li>
         <li>
-            <a href="" class="card">
+            <a href="catalog/steak3.html" class="card">
               <img src="pictures/pic7.png" class="card__image" >
               <div class="card__overlay">
                 <div class="card__header">                
