--- a/contacts.html
+++ b/contacts.html
@@ -17,8 +17,8 @@
     </ul>
   </header>
   <div class="container">
-    <div class="cont">
-      <h2>ООО «АГРО.М»</h2>
+    <div class="descr">
+      <h2 style="text-align: left;">ООО «АГРО.М»</h2>
       <h1>Юридический адрес:</h1>
       <p>143060, Московская область, г. Одинцово, поселок Часцы, дом 3</p>
       <h1>Центральный офис</h1>
