--- a/aboutus.html
+++ b/aboutus.html
@@ -9,20 +9,58 @@
 </head>
 <body>
   <header>
+    <div class="nav">
     <ul>
       <li><a href="index.html">ГЛАВНАЯ</a></li>
       <li><a href="catalog.html">КАТАЛОГ</a></li>
       <li><a href="contacts.html">КОНТАКТЫ</a></li>
       <li><a href="aboutus.html">О НАС</a></li>
-    </ul>
+    </ul></div>
   </header>
-
-  <div class="row">
     <div class="card">
-        <h4>What is a Frontend Develoment?</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam porro similique aliquid debitis ipsam soluta dolorum ipsa! Voluptate, suscipit iure.</p>
+      <div class="pic">
+        <img src="https://images.unsplash.com/photo-1561043394-9f7d16d9ae37?q=80&w=2864&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+      </div>
+      <div class="txt">
+      <p><a>"АГРО.М"</a> — ведущая сельскохозяйственная компания, специализирующаяся 
+        на производстве высококачественной сельскохозяйственной продукции и развитии сельского 
+        хозяйства. В агрохолдинг входят современные фермерские хозяйства, оборудованные 
+        самыми современными технологиями и оборудованием. Компания занимается выращиванием 
+        зерновых культур, овощей, фруктов, а также животноводством. Мы стремится к 
+        постоянному улучшению качества продукции, соблюдая все стандарты качества и 
+        безопасности.
+      </p>
     </div>
-  </div>
+    </div>
+    <div class="card">
+      <div class="txt">
+      <p>«АГРО.М» был основан в 2001 году Михаилом Агаповым. Компания начинала с импорта 
+      говядины и свинины из Латинской Америки. В 2011 году открылась сеть фирменных магазинов 
+      в Московской области. В 2014 и 2017 годах были запущены 
+      мясоперерабатывающие комплексы. На 2017 год земельный банк компании был вторым 
+      по размерам в России. «АГРО.М» также был включен в перечень системообразующих 
+      предприятий России и стал крупнейшим владельцем сельскохозяйственных земель.
+      </p>
+    </div>
+    <div class="pic">
+      <img src="https://images.unsplash.com/photo-1518994603110-1912b3272afd?q=80&w=2824&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+    </div>
+    </div>
+    <div class="card">
+      <div class="pic">
+        <img src="https://images.unsplash.com/photo-1561043394-9f7d16d9ae37?q=80&w=2864&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+      </div>
+      <div class="txt">
+      <p><a>"АГРО.М"</a> — ведущая сельскохозяйственная компания, специализирующаяся 
+        на производстве высококачественной сельскохозяйственной продукции и развитии сельского 
+        хозяйства. В агрохолдинг входят современные фермерские хозяйства, оборудованные 
+        самыми современными технологиями и оборудованием. Компания занимается выращиванием 
+        зерновых культур, овощей, фруктов, а также животноводством. Мы стремится к 
+        постоянному улучшению качества продукции, соблюдая все стандарты качества и 
+        безопасности.
+      </p>
+    </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
