--- a/catalog.html
+++ b/catalog.html
@@ -10,12 +10,14 @@
 
 <body>
     <header>
+      <div class="nav">
         <ul>
           <li><a href="index.html">ГЛАВНАЯ</a></li>
           <li><a href="catalog.html">КАТАЛОГ</a></li>
           <li><a href="contacts.html">КОНТАКТЫ</a></li>
           <li><a href="aboutus.html">О НАС</a></li>
         </ul>
+      </div>
     </header>
     <ul class="cards">
         <li>
