--- a/contacts.html
+++ b/contacts.html
@@ -9,12 +9,13 @@
 </head>
 <body>
   <header>
+    <div class="nav">
     <ul>
       <li><a href="index.html">ГЛАВНАЯ</a></li>
       <li><a href="catalog.html">КАТАЛОГ</a></li>
       <li><a href="contacts.html">КОНТАКТЫ</a></li>
       <li><a href="aboutus.html">О НАС</a></li>
-    </ul>
+    </ul></div>
   </header>
   <div class="container">
     <div class="descr">
