--- a/aboutus.html
+++ b/aboutus.html
@@ -48,16 +48,15 @@
     </div>
     <div class="card">
       <div class="pic">
-        <img src="https://images.unsplash.com/photo-1561043394-9f7d16d9ae37?q=80&w=2864&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+        <img src="https://images.unsplash.com/photo-1621460244823-81de69d0eb50?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
       </div>
       <div class="txt">
-      <p><a>"АГРО.М"</a> — ведущая сельскохозяйственная компания, специализирующаяся 
-        на производстве высококачественной сельскохозяйственной продукции и развитии сельского 
-        хозяйства. В агрохолдинг входят современные фермерские хозяйства, оборудованные 
-        самыми современными технологиями и оборудованием. Компания занимается выращиванием 
-        зерновых культур, овощей, фруктов, а также животноводством. Мы стремится к 
-        постоянному улучшению качества продукции, соблюдая все стандарты качества и 
-        безопасности.
+      <p>Миссия агрохолдинга "АГРО.М" заключается в том, чтобы обеспечивать 
+        высококачественными и экологически чистыми продуктами питания своих потребителей, 
+        развивая сельское хозяйство с использованием современных технологий и инноваций.
+        Мы стремимся к устойчивому развитию агропромышленного сектора и повышению уровня 
+        жизни сельских жителей, инвестируя в сельское хозяйство, создавая новые рабочие места 
+        и развивая инфраструктуру.
       </p>
     </div>
     </div>
