--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
       </div>
     </div>
 
+  <div class="cotainer">
     <div class="content">
-      <h2>Content One</h2>
-      <p>«АГРО.М» является крупнейшим в АПК России получателем государственной помощи как в виде субсидий, так и в виде льготных кредитов, что неоднократно критиковалось другими участниками рынка и экспертами.</p>
+      <p> <a>Агрохолдинг "АГРО.М" внес значительный вклад в развитие сельского хозяйства страны.</a>
+       Инновации в агротехнологиях: "АГРО.М" внедрил передовые технологии в области высокоточного земледелия, что позволило повысить урожайность и снизить экологический отпечаток.
+        Развитие инфраструктуры: Компания инвестировала в строительство современных хранилищ и перерабатывающих заводов, обеспечивая сохранность урожая и добавленную стоимость продукции.
+        Поддержка местных сообществ: "АГРО.М" активно участвует в социальных программах, направленных на поддержку сельских территорий, образование и здравоохранение.
+        Экспортное направление: Открывая новые рынки, "АГРО.М" способствовал укреплению позиций России на мировом аграрном рынке.
+        Эти и многие другие действия агрохолдинга "АГРО.М" способствовали устойчивому развитию аграрного сектора и экономики России в целом.</p>
     </div>
-
+</div>
     <div class="partners">
-      <p>Наши партнёры</p>
       <div class="partners_pict">
         <img src="https://forumspb.com/upload/iblock/a76/6dqgzwhbemhfzg45klyj6sye0np01ru8.png" alt="">
         <img src="https://forumspb.com/upload/iblock/79e/xubqxjxfckcnfvxfffusvchi5971hxyp.png" alt="">
