--- a/aboutus.html
+++ b/aboutus.html
@@ -8,33 +8,37 @@
 
 </head>
 <body>
-  <header>
-    <div class="nav">
-    <ul>
-      <li><a href="index.html">ГЛАВНАЯ</a></li>
-      <li><a href="catalog.html">КАТАЛОГ</a></li>
-      <li><a href="contacts.html">КОНТАКТЫ</a></li>
-      <li><a href="aboutus.html">О НАС</a></li>
-    </ul></div>
-  </header>
-    <div class="card">
-      <div class="pic">
-        <img src="https://images.unsplash.com/photo-1561043394-9f7d16d9ae37?q=80&w=2864&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-      </div>
-      <div class="txt">
-      <p><a>"АГРО.М"</a> — ведущая сельскохозяйственная компания, специализирующаяся 
+
+<header>
+  <nav>
+    <label for="touch"><span>МЕНЮ</span></label>
+    <input type="checkbox" id="touch"> 
+  <ul class="slide">
+    <li><a href="index.html">ГЛАВНАЯ</a></li>
+    <li><a href="catalog.html">КАТАЛОГ</a></li>
+    <li><a href="contacts.html">КОНТАКТЫ</a></li>
+    <li><a href="aboutus.html">О НАС</a></li>
+  </ul>
+  </nav> 
+</header>
+
+<div class="card">
+  <img src="https://images.unsplash.com/photo-1561043394-9f7d16d9ae37?q=80&w=2864&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+  <div class="txt">
+    <p><a>"АГРО.М"</a> — ведущая сельскохозяйственная компания, специализирующаяся 
         на производстве высококачественной сельскохозяйственной продукции и развитии сельского 
         хозяйства. В агрохолдинг входят современные фермерские хозяйства, оборудованные 
         самыми современными технологиями и оборудованием. Компания занимается выращиванием 
         зерновых культур, овощей, фруктов, а также животноводством. Мы стремится к 
         постоянному улучшению качества продукции, соблюдая все стандарты качества и 
         безопасности.
-      </p>
-    </div>
-    </div>
-    <div class="card">
+    </p>s
+  </div>
+</div>
+
+<div class="card">
       <div class="txt">
-      <p>«АГРО.М» был основан в 2001 году Михаилом Агаповым. Компания начинала с импорта 
+      <p><a>ИСТОРИЯ: </a>«АГРО.М» был основан в 2001 году Михаилом Агаповым. Компания начинала с импорта 
       говядины и свинины из Латинской Америки. В 2011 году открылась сеть фирменных магазинов 
       в Московской области. В 2014 и 2017 годах были запущены 
       мясоперерабатывающие комплексы. На 2017 год земельный банк компании был вторым 
@@ -42,16 +46,14 @@
       предприятий России и стал крупнейшим владельцем сельскохозяйственных земель.
       </p>
     </div>
-    <div class="pic">
       <img src="https://images.unsplash.com/photo-1518994603110-1912b3272afd?q=80&w=2824&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-    </div>
-    </div>
-    <div class="card">
-      <div class="pic">
+</div>
+
+<div class="card">
         <img src="https://images.unsplash.com/photo-1621460244823-81de69d0eb50?q=80&w=2787&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
-      </div>
+      
       <div class="txt">
-      <p>Миссия агрохолдинга "АГРО.М" заключается в том, чтобы обеспечивать 
+      <p><a>МИССИЯ: </a>Миссия агрохолдинга "АГРО.М" заключается в том, чтобы обеспечивать 
         высококачественными и экологически чистыми продуктами питания своих потребителей, 
         развивая сельское хозяйство с использованием современных технологий и инноваций.
         Мы стремимся к устойчивому развитию агропромышленного сектора и повышению уровня 
@@ -59,8 +61,7 @@
         и развивая инфраструктуру.
       </p>
     </div>
-    </div>
+</div>
 
-    <script src="script.js"></script>
 </body>
 </html>
