--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,6 @@
 <body>
 
 <header>
-  <nav>
     <label for="touch"><span>МЕНЮ</span></label>
     <input type="checkbox" id="touch"> 
   <ul class="slide">
@@ -19,8 +18,9 @@
     <li><a href="contacts.html">КОНТАКТЫ</a></li>
     <li><a href="aboutus.html">О НАС</a></li>
   </ul>
-  </nav> 
 </header>
+
+<div class="pust"></div>
 
 <div class="card">
   <img src="https://images.unsplash.com/photo-1561043394-9f7d16d9ae37?q=80&w=2864&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
@@ -32,7 +32,7 @@
         зерновых культур, овощей, фруктов, а также животноводством. Мы стремится к 
         постоянному улучшению качества продукции, соблюдая все стандарты качества и 
         безопасности.
-    </p>s
+    </p>
   </div>
 </div>
 
