--- a/catalog.html
+++ b/catalog.html
@@ -9,18 +9,21 @@
 </head>
 
 <body>
-    <header>
-      <div class="nav">
-        <ul>
-          <li><a href="index.html">ГЛАВНАЯ</a></li>
-          <li><a href="catalog.html">КАТАЛОГ</a></li>
-          <li><a href="contacts.html">КОНТАКТЫ</a></li>
-          <li><a href="aboutus.html">О НАС</a></li>
-        </ul>
-      </div>
-    </header>
-    <ul class="cards">
-        <li>
+<header>
+  <label for="touch"><span>МЕНЮ</span></label>
+  <input type="checkbox" id="touch"> 
+  <ul class="slide">
+    <li><a href="index.html">ГЛАВНАЯ</a></li>
+    <li><a href="catalog.html">КАТАЛОГ</a></li>
+    <li><a href="contacts.html">КОНТАКТЫ</a></li>
+    <li><a href="aboutus.html">О НАС</a></li>
+  </ul>
+</header>
+
+<div class="pust"></div>
+
+<ul class="cards">
+  <li>
           <a href="catalog/naggets1.html" class="card">
             <img src="pictures/pic1.png" class="card__image">
             <div class="card__overlay">
@@ -32,8 +35,9 @@
               </div>
               </div>
           </a>      
-        </li>
-        <li>
+  </li>
+  
+  <li>
           <a href="catalog/naggets2.html" class="card">
             <img src="pictures/pic2.png" class="card__image">
             <div class="card__overlay">        
@@ -45,8 +49,9 @@
               </div>
               </div>
           </a>
-        </li>
-        <li>
+  </li>
+  
+  <li>
           <a href="catalog/naggets3.html" class="card">
             <img src="pictures/pic3.png" class="card__image" alt="" />
             <div class="card__overlay">
@@ -58,8 +63,9 @@
               </div>
             </div>
           </a>
-        </li>
-        <li>
+  </li>
+  
+  <li>
           <a href="catalog/naggets4.html" class="card">
             <img src="pictures/picc4.png" class="card__image" alt="" />
             <div class="card__overlay">
@@ -71,8 +77,9 @@
               </div>
               </div>
           </a>
-        </li>
-        <li>
+  </li>
+  
+  <li>
             <a href="catalog/steak1.html" class="card">
               <img src="pictures/pic4.png" class="card__image" alt="" />
               <div class="card__overlay">
@@ -84,8 +91,9 @@
                 </div>
                 </div>
             </a>
-        </li>   
-        <li>
+  </li>   
+  
+  <li>
             <a href="catalog/steak2.html" class="card">
               <img src="pictures/pic5.png" class="card__image" alt="" />
               <div class="card__overlay">
@@ -97,8 +105,9 @@
                 </div>
                 </div>
             </a>
-        </li>
-        <li>
+  </li>
+  
+  <li>
             <a href="" class="card">
               <img src="pictures/picc6.png" class="card__image">
               <div class="card__overlay">
@@ -110,8 +119,9 @@
                 </div>
                 </div>
             </a>
-        </li>
-        <li>
+  </li>
+  
+  <li>
             <a href="catalog/steak3.html" class="card">
               <img src="pictures/pic7.png" class="card__image" >
               <div class="card__overlay">
@@ -123,10 +133,8 @@
                 </div>
                 </div>
             </a>
-        </li>
-    </ul>
+  </li>
+</ul>
 
-
-    <script src="script.js"></script>
 </body>
 </html>
