--- a/contacts.html
+++ b/contacts.html
@@ -8,16 +8,20 @@
 
 </head>
 <body>
-  <header>
-    <div class="nav">
-    <ul>
-      <li><a href="index.html">ГЛАВНАЯ</a></li>
-      <li><a href="catalog.html">КАТАЛОГ</a></li>
-      <li><a href="contacts.html">КОНТАКТЫ</a></li>
-      <li><a href="aboutus.html">О НАС</a></li>
-    </ul></div>
-  </header>
-  <div class="container">
+<header>
+  <label for="touch"><span>МЕНЮ</span></label>
+  <input type="checkbox" id="touch"> 
+  <ul class="slide">
+    <li><a href="index.html">ГЛАВНАЯ</a></li>
+    <li><a href="catalog.html">КАТАЛОГ</a></li>
+    <li><a href="contacts.html">КОНТАКТЫ</a></li>
+    <li><a href="aboutus.html">О НАС</a></li>
+  </ul>
+</header>
+  
+<div class="pust"></div>
+
+<div class="container">
     <div class="descr">
       <h2 style="text-align: left;">ООО «АГРО.М»</h2>
       <h1>Юридический адрес:</h1>
@@ -47,8 +51,7 @@
       </label>
       <button class="btn">ОТПРАВИТЬ</button>
     </div>
-  </div>
+</div>
 
-  <script src="script.js"></script>
 </body>
 </html>
