--- a/aboutus.html
+++ b/aboutus.html
@@ -10,14 +10,19 @@
 <body>
 
 <header>
-    <label for="touch"><span>МЕНЮ</span></label>
-    <input type="checkbox" id="touch"> 
-  <ul class="slide">
-    <li><a href="index.html">ГЛАВНАЯ</a></li>
-    <li><a href="catalog.html">КАТАЛОГ</a></li>
-    <li><a href="contacts.html">КОНТАКТЫ</a></li>
-    <li><a href="aboutus.html">О НАС</a></li>
-  </ul>
+<label for="touch">
+    <span>
+      <img src="pictures/menu.svg" alt="">
+    </span>
+  </label>
+<input type="checkbox" id="touch">
+        
+<ul class="slide">
+  <li><a href="index.html">ГЛАВНАЯ</a></li>
+  <li><a href="catalog.html">КАТАЛОГ</a></li>
+  <li><a href="contacts.html">КОНТАКТЫ</a></li>
+  <li><a href="aboutus.html">О НАС</a></li>
+</ul>
 </header>
 
 <div class="pust"></div>
@@ -63,5 +68,6 @@
     </div>
 </div>
 
+<script src="script.js"></script>
 </body>
 </html>
