--- a/catalog.html
+++ b/catalog.html
@@ -10,8 +10,12 @@
 
 <body>
 <header>
-  <label for="touch"><span>МЕНЮ</span></label>
-  <input type="checkbox" id="touch"> 
+  <label for="touch">
+    <span>
+      <img src="pictures/menu.svg" alt="">
+    </span>
+  </label>
+<input type="checkbox" id="touch">
   <ul class="slide">
     <li><a href="index.html">ГЛАВНАЯ</a></li>
     <li><a href="catalog.html">КАТАЛОГ</a></li>
