--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 <header>
   <ul>
-    <li><a href="index.html">ГЛАВНАЯ</a></li>
     <li><a href="catalog.html">КАТАЛОГ</a></li>
     <li><a href="contacts.html">КОНТАКТЫ</a></li>
     <li><a href="aboutus.html">О НАС</a></li>
@@ -25,21 +24,21 @@
 
 <div class="cotainer">
     <div class="content">
-      <p> <a>Агрохолдинг "АГРО.М" внес значительный вклад в развитие сельского хозяйства страны.</a>
-       Инновации в агротехнологиях: "АГРО.М" внедрил передовые технологии в области высокоточного земледелия, что позволило повысить урожайность и снизить экологический отпечаток.
-        Развитие инфраструктуры: Компания инвестировала в строительство современных хранилищ и перерабатывающих заводов, обеспечивая сохранность урожая и добавленную стоимость продукции.
-        Поддержка местных сообществ: "АГРО.М" активно участвует в социальных программах, направленных на поддержку сельских территорий, образование и здравоохранение.
-        Экспортное направление: Открывая новые рынки, "АГРО.М" способствовал укреплению позиций России на мировом аграрном рынке.
-        Эти и многие другие действия агрохолдинга "АГРО.М" способствовали устойчивому развитию аграрного сектора и экономики России в целом.</p>
+      <h1>Агрохолдинг "АГРО.М" внес и продолжает вносить значительный вклад в развитие сельского хозяйства страны:</h1>
+      <p>Инновации в агротехнологиях: Агрохолдинг внедрил передовые технологии в области высокоточного земледелия, что позволило повысить урожайность и снизить экологический отпечаток.</p>
+      <p>Развитие инфраструктуры: Компания инвестировала в строительство современных хранилищ и перерабатывающих заводов, обеспечивая сохранность урожая и добавленную стоимость продукции.</p>
+      <p>Поддержка местных сообществ: "АГРО.М" активно участвует в социальных программах, направленных на поддержку сельских территорий, образование и здравоохранение.</p>
+      <p>Экспортное направление: Открывая новые рынки, мы способствовали укреплению позиций России на мировом аграрном рынке.</p>
+      <p>Эти и многие другие действия агрохолдинга "АГРО.М" способствовали устойчивому развитию аграрного сектора и экономики России в целом.</p>
     </div>
-</div>
-
-<div class="partners">
-      <div class="partners_pict">
-        <img src="https://forumspb.com/upload/iblock/a76/6dqgzwhbemhfzg45klyj6sye0np01ru8.png" alt="">
-        <img src="https://forumspb.com/upload/iblock/79e/xubqxjxfckcnfvxfffusvchi5971hxyp.png" alt="">
-        <img src="https://forumspb.com/upload/iblock/b0a/65ml5r0v5dxkw2rer4iu7aq8fqja2ofy.png" alt="">
-      </div>
+    <div class="content">
+      <h1>Агрохолдинг "АГРО.М" активно участвует в национальных проектах России, спортивных мероприятиях и благотворительных акциях:</h1>
+      <p>В рамках национального проекта "Технологии в ростениеводстве" агрохолдинг "АГРО.М" осуществляет современное обновление сельскохозяйственного производства, внедряя инновационные технологии и методы управления, что способствует увеличению производительности и конкурентоспособности отрасли.</p>
+      <p>На спортивных мероприятиях "АГРО.М" выступает спонсором и партнером, поддерживая различные виды спорта и инициативы по развитию здорового образа жизни.</p>
+      <p>Помимо этого, "АГРО.М" активно участвует в социальных программах, направленных на поддержку сельских территорий, образование и здравоохранение.</p>
+      <p>А также открывая новые рынки, мы способствуем укреплению позиций России на мировом аграрном рынке.</p>
+      <p>Эти и многие другие действия агрохолдинга "АГРО.М" способствовали устойчивому развитию аграрного сектора и экономики России в целом.</p>
+    </div>
 </div>
 
 </body>
