--- a/contacts.html
+++ b/contacts.html
@@ -9,8 +9,12 @@
 </head>
 <body>
 <header>
-  <label for="touch"><span>МЕНЮ</span></label>
-  <input type="checkbox" id="touch"> 
+  <label for="touch">
+    <span>
+      <img src="pictures/menu.svg" alt="">
+    </span>
+  </label>
+<input type="checkbox" id="touch">
   <ul class="slide">
     <li><a href="index.html">ГЛАВНАЯ</a></li>
     <li><a href="catalog.html">КАТАЛОГ</a></li>
