--- a/catalog/naggets1.html
+++ b/catalog/naggets1.html
@@ -5,20 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Наггетсы куриные хрустящие</title>
     <link rel="stylesheet" href="naggets1.css">
-
 </head>
-
 <body>
-    <header>
-        <ul>
-          <li><a href="../index.html">ГЛАВНАЯ</a></li>
-          <li><a href="../catalog.html">КАТАЛОГ</a></li>
-          <li><a href="../contacts.html">КОНТАКТЫ</a></li>
-          <li><a href="../aboutus.html">О НАС</a></li>
-        </ul>
-    </header>
-
-    <div class="container">
+  <header>
+    <label for="touch">
+      <span>
+        <img src="../pictures/menu.svg" alt="">
+      </span>
+    </label>
+  <input type="checkbox" id="touch">
+    <ul class="slide">
+      <li><a href="../index.html">ГЛАВНАЯ</a></li>
+      <li><a href="../catalog.html">КАТАЛОГ</a></li>
+      <li><a href="../contacts.html">КОНТАКТЫ</a></li>
+      <li><a href="../aboutus.html">О НАС</a></li>
+    </ul>
+  </header>
+  <div class="pust"></div>
+<div class="container">
       <img src="../catalog_pic/1.png" alt="">
       <div class="descr">
       <h1>Описание продукта</h1>
@@ -27,10 +31,7 @@
       <p>Белки — 13 г, жиры — 7,4 г, углеводы – 16 г</p>
       <h1>Энергетическая ценность:</h1>
       <p>182 ккал/765 кДж</p></div>
-    </div>
+</div>
 
-
-
-    <script src="script.js"></script>
 </body>
 </html>
