--- a/catalog/naggets2.html
+++ b/catalog/naggets2.html
@@ -9,14 +9,21 @@
 </head>
 
 <body>
-    <header>
-        <ul>
-          <li><a href="../index.html">ГЛАВНАЯ</a></li>
-          <li><a href="../catalog.html">КАТАЛОГ</a></li>
-          <li><a href="../contacts.html">КОНТАКТЫ</a></li>
-          <li><a href="../aboutus.html">О НАС</a></li>
-        </ul>
-    </header>
+  <header>
+    <label for="touch">
+      <span>
+        <img src="../pictures/menu.svg" alt="">
+      </span>
+    </label>
+  <input type="checkbox" id="touch">
+    <ul class="slide">
+      <li><a href="../index.html">ГЛАВНАЯ</a></li>
+      <li><a href="../catalog.html">КАТАЛОГ</a></li>
+      <li><a href="../contacts.html">КОНТАКТЫ</a></li>
+      <li><a href="../aboutus.html">О НАС</a></li>
+    </ul>
+  </header>
+  <div class="pust"></div>
 
     <div class="container">
       <img src="../catalog_pic/2.png" alt="">
@@ -24,7 +31,7 @@
       <h1>Описание продукта</h1>
       <p>Нежнейший сыр придает наггетсам соблазнительный аромат и насыщенный, пикантный вкус, а золотистая панировка «Миланезе» сохраняет сочность отборного куриного филе. Приятного аппетита!</p>
       <h1>Пищевая ценность:</h1>
-      <p>белки — 11 г, жиры — 9,6 г, углеводы — 20,5 г</p>
+      <p>Белки — 11 г, жиры — 9,6 г, углеводы — 20,5 г</p>
       <h1>Энергетическая ценность:</h1>
       <p>206,5 ккал / 865,5 кДж</p></div>
     </div>
