--- a/catalog/steak2.html
+++ b/catalog/steak2.html
@@ -9,14 +9,21 @@
 </head>
 
 <body>
-    <header>
-        <ul>
-          <li><a href="../index.html">ГЛАВНАЯ</a></li>
-          <li><a href="../catalog.html">КАТАЛОГ</a></li>
-          <li><a href="../contacts.html">КОНТАКТЫ</a></li>
-          <li><a href="../aboutus.html">О НАС</a></li>
-        </ul>
-    </header>
+  <header>
+    <label for="touch">
+      <span>
+        <img src="../pictures/menu.svg" alt="">
+      </span>
+    </label>
+  <input type="checkbox" id="touch">
+    <ul class="slide">
+      <li><a href="../index.html">ГЛАВНАЯ</a></li>
+      <li><a href="../catalog.html">КАТАЛОГ</a></li>
+      <li><a href="../contacts.html">КОНТАКТЫ</a></li>
+      <li><a href="../aboutus.html">О НАС</a></li>
+    </ul>
+  </header>
+  <div class="pust"></div>
 
     <div class="container">
       <img src="../catalog_pic/6.png" alt="">
