--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
 <header>
 <label for="touch">
     <span>
-      <img src="pictures/menu.svg" alt="">
+      <img src="pictures/logo.png" alt="">
     </span>
   </label>
 <input type="checkbox" id="touch">
