--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
 <div class="cotainer">
     <div class="content">
-      <h1>Агрохолдинг "АГРО.М" внес и продолжает вносить значительный вклад в развитие сельского хозяйства страны:</h1>
+      <span><h1>Агрохолдинг "АГРО.М" внес и продолжает вносить значительный вклад в развитие сельского хозяйства страны:</h1>
       <p>Инновации в агротехнологиях: Агрохолдинг внедрил передовые технологии в области высокоточного земледелия, что позволило повысить урожайность и снизить экологический отпечаток.</p>
       <p>Развитие инфраструктуры: Компания инвестировала в строительство современных хранилищ и перерабатывающих заводов, обеспечивая сохранность урожая и добавленную стоимость продукции.</p>
       <p>Поддержка местных сообществ: "АГРО.М" активно участвует в социальных программах, направленных на поддержку сельских территорий, образование и здравоохранение.</p>
       <p>Экспортное направление: Открывая новые рынки, мы способствовали укреплению позиций России на мировом аграрном рынке.</p>
       <p>Эти и многие другие действия агрохолдинга "АГРО.М" способствовали устойчивому развитию аграрного сектора и экономики России в целом.</p>
-    </div>
+</span></div>
     <div class="content">
       <h1>Агрохолдинг "АГРО.М" активно участвует в национальных проектах России, спортивных мероприятиях и благотворительных акциях:</h1>
       <p>В рамках национального проекта "Технологии в ростениеводстве" агрохолдинг "АГРО.М" осуществляет современное обновление сельскохозяйственного производства, внедряя инновационные технологии и методы управления, что способствует увеличению производительности и конкурентоспособности отрасли.</p>
@@ -40,6 +40,6 @@
       <p>Эти и многие другие действия агрохолдинга "АГРО.М" способствовали устойчивому развитию аграрного сектора и экономики России в целом.</p>
     </div>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
