--- a/contacts.html
+++ b/contacts.html
@@ -11,7 +11,7 @@
 <header>
   <label for="touch">
     <span>
-      <img src="pictures/menu.svg" alt="">
+      <img src="pictures/logo.png" alt="">
     </span>
   </label>
 <input type="checkbox" id="touch">
