--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="hero">
       <div class="container">
         <p class="title">АГРО.M</p>
-        <p>крупнейший агрохолдинг в России</p>
+        <p id="typing-text"></p>
       </div>
 </div>
 
