--- a/catalog/naggets1.html
+++ b/catalog/naggets1.html
@@ -10,7 +10,7 @@
   <header>
     <label for="touch">
       <span>
-        <img src="../pictures/menu.svg" alt="">
+        <img src="../pictures/logo.png" alt="">
       </span>
     </label>
   <input type="checkbox" id="touch">
@@ -32,6 +32,6 @@
       <h1>Энергетическая ценность:</h1>
       <p>182 ккал/765 кДж</p></div>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
